Fix CSS alignment issues and print mode

--- a/jsonresume-theme-erin/app/styles/base/_fonts.scss
+++ b/jsonresume-theme-erin/app/styles/base/_fonts.scss
@@ -17,111 +17,3 @@
   font-family: $secondary-font;
   font-weight: $weight;
 }
-
-@font-face {
-  font-family: 'chunkfive';
-  src: url('../../fonts/chunkfive/chunkfive-webfont.woff2') format('woff2'),
-  url('../../fonts/chunkfive/chunkfive-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'scala';
-  src: url('../../fonts/scala/scala-bold-webfont.woff2') format('woff2'),
-  url('../../fonts/scala/scala-bold-webfont.woff') format('woff');
-  font-weight: bold;
-  font-style: normal;
-
-}
-
-@font-face {
-  font-family: 'scala';
-  src: url('../../fonts/scala/scala-bolditalic-webfont.woff2') format('woff2'),
-  url('../../fonts/scala/scala-bolditalic-webfont.woff') format('woff');
-  font-weight: bold;
-  font-style: italic;
-
-}
-
-@font-face {
-  font-family: 'scala';
-  src: url('../../fonts/scala/scala-italic-webfont.woff2') format('woff2'),
-  url('../../fonts/scala/scala-italic-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: italic;
-
-}
-
-@font-face {
-  font-family: 'scala';
-  src: url('../../fonts/scala/scala-webfont.woff2') format('woff2'),
-  url('../../fonts/scala/scala-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-
-}
-
-@font-face {
-  font-family: 'scala_sans';
-  src: url('../../fonts/scala/scalasans-bold-webfont.woff2') format('woff2'),
-  url('../../fonts/scala/scalasans-bold-webfont.woff') format('woff');
-  font-weight: bold;
-  font-style: normal;
-
-}
-
-@font-face {
-  font-family: 'scala_sans';
-  src: url('../../fonts/scala/scalasans-bolditalic-webfont.woff2') format('woff2'),
-  url('../../fonts/scala/scalasans-bolditalic-webfont.woff') format('woff');
-  font-weight: bold;
-  font-style: italic;
-
-}
-
-@font-face {
-  font-family: 'scala_sans';
-  src: url('../../fonts/scala/scalasans-italic-webfont.woff2') format('woff2'),
-  url('../../fonts/scala/scalasans-italic-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: italic;
-
-}
-
-@font-face {
-  font-family: 'scala_sans';
-  src: url('../../fonts/scala/scalasans-webfont.woff2') format('woff2'),
-  url('../../fonts/scala/scalasans-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-
-}
-
-@font-face {
-  font-family: 'scala_sans';
-  src: url('../../fonts/scala/scalasansblack-webfont.woff2') format('woff2'),
-  url('../../fonts/scala/scalasansblack-webfont.woff') format('woff');
-  font-weight: 900;
-  font-style: normal;
-
-}
-
-@font-face {
-  font-family: 'scala_sans_condensed';
-  src: url('../../fonts/scala/scalasanscond-bold-webfont.woff2') format('woff2'),
-  url('../../fonts/scala/scalasanscond-bold-webfont.woff') format('woff');
-  font-weight: bold;
-  font-style: normal;
-
-}
-
-@font-face {
-  font-family: 'scala_sans_condensed';
-  src: url('../../fonts/scala/scalasanscond-webfont.woff2') format('woff2'),
-  url('../../fonts/scala/scalasanscond-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-
-}
-
