--- a/jsonresume-theme-erin/app/styles/components/_info-tag.scss
+++ b/jsonresume-theme-erin/app/styles/components/_info-tag.scss
@@ -1,7 +1,7 @@
 .about-table {
   border-spacing: 10px 4px;
   border-collapse: separate;
-  margin: 10px -10px -10px;
+  margin: 10px -10px 0;
   tr {
     height: spacing(2);
     td {
