--- a/jsonresume-theme-erin/app/styles/layouts/_print.scss
+++ b/jsonresume-theme-erin/app/styles/layouts/_print.scss
@@ -3,17 +3,29 @@
     margin: 0;
   }
 
-  .page {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 36px 0 30px;
-    box-shadow: none;
+  a[href]:after {
+    content: none !important;
+  }
 
-    .resume-header,
-    .resume-content {
-      padding: 0 22px 0 34px;
+  .header-row {
+    border-bottom: 5px solid $eb-green;
+
+    #photo {
+      display: none;
     }
+    #text-header {
+      h1 {
+        font-size: 3em;
+      }
+
+      .contact {
+        display: none;
+      }
+    }
+  }
+
+  .resume-content {
+    padding-top: spacing(2) !important;
   }
 
   .container {
